--- a/Roamni/Main.storyboard
+++ b/Roamni/Main.storyboard
@@ -199,7 +199,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lif-PK-nYD">
-                                        <rect key="frame" x="88" y="108" width="44" height="21"/>
+                                        <rect key="frame" x="78" y="109" width="64" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
@@ -284,7 +284,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fa0-wI-kDU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1116" y="1199"/>
+            <point key="canvasLocation" x="-973.91304347826099" y="1142.9347826086957"/>
         </scene>
         <!--Reviews-->
         <scene sceneID="EWt-cU-aaU">
